Day 6 progress: Gateway, Auth, Product microservices and React frontend